[bug 624524] Unwonkify collapse animation. Thanks, Ricky!

--- a/media/css/dashboards.css
+++ b/media/css/dashboards.css
@@ -144,3 +144,7 @@
 .dashboards summary.with-mode-selectors {
     display: inline;
 }
+
+.dashboards details table {
+    display: block;  /* Makes collapse animation work */
+}
